// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu 内嵌菜单 inlineCollapsed 1`] = `
.c8 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-style: normal;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  width: 1em;
  height: 1em;
  overflow: hidden;
  fill: currentColor;
}

.c20 .c7 {
  margin-right: 8px;
  font-size: 16px;
  color: rgba(204,204,204,1);
  -webkit-transition: color 150ms cubic-bezier(0.4,0,0.2,1);
  transition: color 150ms cubic-bezier(0.4,0,0.2,1);
}

.c20 .c4 .c6,
.c20 .c17,
.c20 .c11 .c35,
.c20 .c11 .c4 .c6 {
  margin: 0;
  padding: 0 16px;
}

.c20 .c2 {
  overflow-x: auto;
}

.c20 .c34 .c7 {
  margin-right: 0;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  width: 100%;
  font-size: 14px;
  line-height: 20px;
  font-variant: tabular-nums;
  font-feature-settings: 'tnum';
  padding: 0;
  color: rgba(102,102,102,1);
  background: transparent;
  outline: none;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  zoom: 1;
}

.c1 .c7 {
  margin-right: 8px;
  font-size: 16px;
  color: rgba(204,204,204,1);
  -webkit-transition: color 150ms cubic-bezier(0.4,0,0.2,1);
  transition: color 150ms cubic-bezier(0.4,0,0.2,1);
}

.c1 .c34 .c7 {
  margin-right: 0;
}

.c3 {
  overflow-x: hidden;
  overflow-y: auto;
}

.c18 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  line-height: 32px;
  margin: 4px 8px;
  padding: 0 8px;
  font-size: 14px;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  cursor: pointer;
}

.c18 .c19 {
  display: block;
  margin-right: 8px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c21 .c19 {
  display: block;
  margin-right: 8px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c21 .c7 {
  color: rgba(26,122,248,1);
}

.c16 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c22 > .c15 .c17 {
  color: rgba(102,102,102,1);
  background-color: transparent;
  font-weight: 400;
}

.c22 > .c15 .c17:hover {
  color: rgba(26,122,248,1);
  background-color: rgba(255,255,255,1);
}

.c22 > .c15 .c17:active {
  color: rgba(26,122,248,1);
  background-color: rgba(255,255,255,1);
}

.c22 > .c15 .c17 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  line-height: 20px;
  color: rgba(26,122,248,1);
}

.c22 > .c15 .c17:hover .c7 {
  color: rgba(26,122,248,1);
  -webkit-transition: color 150ms cubic-bezier(0.4,0,0.2,1);
  transition: color 150ms cubic-bezier(0.4,0,0.2,1);
}

.c22 > .c15 .c17 .c7 {
  color: rgba(26,122,248,1);
  -webkit-transition: color 150ms cubic-bezier(0.4,0,0.2,1);
  transition: color 150ms cubic-bezier(0.4,0,0.2,1);
}

.c23 > .c15 .c17 {
  color: rgba(26,122,248,1);
  background-color: rgba(26,122,248,0.04);
  font-weight: 600;
}

.c23 > .c15 .c17:hover {
  color: rgba(26,122,248,1);
  background-color: rgba(26,122,248,0.08);
}

.c23 > .c15 .c17:active {
  color: rgba(26,122,248,1);
  background-color: rgba(26,122,248,0.04);
}

.c24 > .c15 .c17 {
  color: rgba(102,102,102,1);
  background-color: transparent;
  font-weight: 400;
}

.c24 > .c15 .c17:hover {
  color: rgba(102,102,102,1);
  background-color: rgba(250,250,250,1);
}

.c24 > .c15 .c17:active {
  color: rgba(102,102,102,1);
  background-color: rgba(250,250,250,1);
}

.c25 > .c15 .c17 {
  color: rgba(102,102,102,1);
  background-color: transparent;
  font-weight: 400;
}

.c25 > .c15 .c17:hover {
  color: rgba(102,102,102,1);
  background-color: rgba(250,250,250,1);
}

.c25 > .c15 .c17:active {
  color: rgba(102,102,102,1);
  background-color: rgba(250,250,250,1);
}

.c14 {
  position: relative;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
}

.c14 > .c15 .c17 {
  color: rgba(102,102,102,1);
  background-color: transparent;
  font-weight: 400;
}

.c14 > .c15 .c17:hover {
  color: rgba(102,102,102,1);
  background-color: rgba(250,250,250,1);
}

.c14 > .c15 .c17:active {
  color: rgba(102,102,102,1);
  background-color: rgba(250,250,250,1);
}

.c14 .c19 {
  margin-right: 0;
}

.c14 .c7 {
  margin-right: 0;
}

.c10 {
  opacity: 1;
}

.c26 .c6 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 32px;
  line-height: 32px;
  margin: 4px 8px;
  padding: 0 8px;
  font-size: 14px;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  cursor: pointer;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  color: rgba(26,122,248,1);
  background-color: rgba(255,255,255,1);
  font-weight: 600;
}

.c26 .c6 .c7 {
  color: rgba(26,122,248,1);
}

.c26 .c6:hover {
  color: rgba(26,122,248,1);
  background-color: rgba(255,255,255,1);
}

.c26 .c6:active {
  color: rgba(26,122,248,1);
  background-color: rgba(255,255,255,1);
}

.c26 .c9 {
  -webkit-transition: opacity 150ms cubic-bezier(0.4,0,0.2,1),width 150ms cubic-bezier(0.4,0,0.2,1);
  transition: opacity 150ms cubic-bezier(0.4,0,0.2,1),width 150ms cubic-bezier(0.4,0,0.2,1);
}

.c26 .c9:only-child a {
  display: block;
}

.c26 .c6 {
  line-height: 20px;
}

.c26 .c6:hover .c7 {
  color: rgba(26,122,248,1);
  -webkit-transition: color 150ms cubic-bezier(0.4,0,0.2,1);
  transition: color 150ms cubic-bezier(0.4,0,0.2,1);
}

.c27 .c6 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 32px;
  line-height: 32px;
  margin: 4px 8px;
  padding: 0 8px;
  font-size: 14px;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  cursor: pointer;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  color: rgba(221,221,221,1);
  background-color: transparent;
  font-weight: 400;
  cursor: not-allowed;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c27 .c6:hover {
  color: rgba(221,221,221,1);
  background-color: transparent;
}

.c27 .c6:active {
  color: rgba(221,221,221,1);
  background-color: transparent;
}

.c27 .c9 {
  -webkit-transition: opacity 150ms cubic-bezier(0.4,0,0.2,1),width 150ms cubic-bezier(0.4,0,0.2,1);
  transition: opacity 150ms cubic-bezier(0.4,0,0.2,1),width 150ms cubic-bezier(0.4,0,0.2,1);
}

.c27 .c9:only-child a {
  display: block;
}

.c27 .c6 {
  line-height: 20px;
}

.c28 .c6 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 32px;
  line-height: 32px;
  margin: 4px 8px;
  padding: 0 8px;
  font-size: 14px;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  cursor: pointer;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  color: rgba(102,102,102,1);
  background-color: transparent;
  font-weight: 400;
}

.c28 .c6:hover {
  color: rgba(26,122,248,1);
  background-color: rgba(255,255,255,1);
}

.c28 .c6:active {
  color: rgba(26,122,248,1);
  background-color: rgba(255,255,255,1);
}

.c28 .c9 {
  -webkit-transition: opacity 150ms cubic-bezier(0.4,0,0.2,1),width 150ms cubic-bezier(0.4,0,0.2,1);
  transition: opacity 150ms cubic-bezier(0.4,0,0.2,1),width 150ms cubic-bezier(0.4,0,0.2,1);
}

.c28 .c9:only-child a {
  display: block;
}

.c28 .c6 {
  line-height: 20px;
}

.c28 .c6:hover .c7 {
  color: rgba(26,122,248,1);
  -webkit-transition: color 150ms cubic-bezier(0.4,0,0.2,1);
  transition: color 150ms cubic-bezier(0.4,0,0.2,1);
}

.c29 .c6 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 32px;
  line-height: 32px;
  margin: 4px 8px;
  padding: 0 8px;
  font-size: 14px;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  cursor: pointer;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  padding-left: 32px;
  color: rgba(26,122,248,1);
  background-color: rgba(26,122,248,0.04);
  font-weight: 600;
}

.c29 .c6 .c7 {
  color: rgba(26,122,248,1);
}

.c29 .c6:hover {
  color: rgba(26,122,248,1);
  background-color: rgba(26,122,248,0.08);
}

.c29 .c6:active {
  color: rgba(26,122,248,1);
  background-color: rgba(26,122,248,0.04);
}

.c29 .c9 {
  -webkit-transition: opacity 150ms cubic-bezier(0.4,0,0.2,1),width 150ms cubic-bezier(0.4,0,0.2,1);
  transition: opacity 150ms cubic-bezier(0.4,0,0.2,1),width 150ms cubic-bezier(0.4,0,0.2,1);
}

.c29 .c9:only-child a {
  display: block;
}

.c30 .c6 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 32px;
  line-height: 32px;
  margin: 4px 8px;
  padding: 0 8px;
  font-size: 14px;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  cursor: pointer;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  padding-left: 32px;
  color: rgba(102,102,102,1);
  background-color: transparent;
  font-weight: 400;
}

.c30 .c6:hover {
  color: rgba(102,102,102,1);
  background-color: rgba(250,250,250,1);
}

.c30 .c6:active {
  color: rgba(102,102,102,1);
  background-color: rgba(250,250,250,1);
}

.c30 .c9 {
  -webkit-transition: opacity 150ms cubic-bezier(0.4,0,0.2,1),width 150ms cubic-bezier(0.4,0,0.2,1);
  transition: opacity 150ms cubic-bezier(0.4,0,0.2,1),width 150ms cubic-bezier(0.4,0,0.2,1);
}

.c30 .c9:only-child a {
  display: block;
}

.c31 .c6 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 32px;
  line-height: 32px;
  margin: 4px 8px;
  padding: 0 8px;
  font-size: 14px;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  cursor: pointer;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  padding-left: 32px;
  color: rgba(221,221,221,1);
  background-color: transparent;
  font-weight: 400;
  cursor: not-allowed;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c31 .c6:hover {
  color: rgba(221,221,221,1);
  background-color: transparent;
}

.c31 .c6:active {
  color: rgba(221,221,221,1);
  background-color: transparent;
}

.c31 .c9 {
  -webkit-transition: opacity 150ms cubic-bezier(0.4,0,0.2,1),width 150ms cubic-bezier(0.4,0,0.2,1);
  transition: opacity 150ms cubic-bezier(0.4,0,0.2,1),width 150ms cubic-bezier(0.4,0,0.2,1);
}

.c31 .c9:only-child a {
  display: block;
}

.c32 .c6 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 32px;
  line-height: 32px;
  margin: 4px 8px;
  padding: 0 8px;
  font-size: 14px;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  cursor: pointer;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  padding-left: 20px;
  color: rgba(102,102,102,1);
  background-color: transparent;
  font-weight: 400;
}

.c32 .c6:hover {
  color: rgba(102,102,102,1);
  background-color: rgba(250,250,250,1);
}

.c32 .c6:active {
  color: rgba(102,102,102,1);
  background-color: rgba(250,250,250,1);
}

.c32 .c9 {
  -webkit-transition: opacity 150ms cubic-bezier(0.4,0,0.2,1),width 150ms cubic-bezier(0.4,0,0.2,1);
  transition: opacity 150ms cubic-bezier(0.4,0,0.2,1),width 150ms cubic-bezier(0.4,0,0.2,1);
}

.c32 .c9:only-child a {
  display: block;
}

.c5 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 .c6 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 32px;
  line-height: 32px;
  margin: 4px 8px;
  padding: 0 8px;
  font-size: 14px;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  cursor: pointer;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  color: rgba(26,122,248,1);
  background-color: rgba(26,122,248,0.04);
  font-weight: 600;
}

.c5 .c6 .c7 {
  margin-right: 0;
}

.c5 .c6 .c9 {
  display: inline-block;
  max-width: 0;
  opacity: 0;
}

.c5 .c6 .c7 {
  color: rgba(26,122,248,1);
}

.c5 .c6:hover {
  color: rgba(26,122,248,1);
  background-color: rgba(26,122,248,0.08);
}

.c5 .c6:active {
  color: rgba(26,122,248,1);
  background-color: rgba(26,122,248,0.04);
}

.c5 .c9 {
  -webkit-transition: opacity 150ms cubic-bezier(0.4,0,0.2,1),width 150ms cubic-bezier(0.4,0,0.2,1);
  transition: opacity 150ms cubic-bezier(0.4,0,0.2,1),width 150ms cubic-bezier(0.4,0,0.2,1);
}

.c5 .c9:only-child a {
  display: block;
}

.c5 a {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c5 a::before {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: transparent;
  content: '';
}

.c13 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c13 .c6 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 32px;
  line-height: 32px;
  margin: 4px 8px;
  padding: 0 8px;
  font-size: 14px;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  cursor: pointer;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  color: rgba(102,102,102,1);
  background-color: transparent;
  font-weight: 400;
}

.c13 .c6 .c7 {
  margin-right: 0;
}

.c13 .c6 .c9 {
  display: inline-block;
  max-width: 0;
  opacity: 0;
}

.c13 .c6:hover {
  color: rgba(102,102,102,1);
  background-color: rgba(250,250,250,1);
}

.c13 .c6:active {
  color: rgba(102,102,102,1);
  background-color: rgba(250,250,250,1);
}

.c13 .c9 {
  -webkit-transition: opacity 150ms cubic-bezier(0.4,0,0.2,1),width 150ms cubic-bezier(0.4,0,0.2,1);
  transition: opacity 150ms cubic-bezier(0.4,0,0.2,1),width 150ms cubic-bezier(0.4,0,0.2,1);
}

.c13 .c9:only-child a {
  display: block;
}

.c13 a {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c13 a::before {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: transparent;
  content: '';
}

.c33 > .c4 .c6 {
  padding-left: 8px;
}

.c12 .c35 {
  display: block;
  box-sizing: border-box;
  font-size: 12px;
  line-height: 16px;
  height: 34px;
  background: transparent;
  color: rgba(153,153,153,1);
  padding: 16px 16px 0;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c12 > .c4 .c6 {
  padding-left: 8px;
}

.c0 {
  height: 100%;
  background: rgba(255,255,255,1);
  border-radius: 4px;
  padding: 0;
  overflow: auto;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  width: 100%;
  width: 200px;
  width: 48px;
}

.c0::-webkit-scrollbar {
  width: 4px;
  height: 4px;
}

.c0::-webkit-scrollbar-thumb {
  border-radius: 999rem;
  background-color: transparent;
}

.c0:hover::-webkit-scrollbar-thumb {
  background-color: rgba(51,51,51,0.12);
}

.c0:hover::-webkit-scrollbar-thumb:hover {
  background-color: rgba(51,51,51,0.16);
}

.c0 .c36 {
  background: rgba(238,238,238,1);
  margin: 5.5px 16px;
}

<div
  className="c0 muya-menu-wrapper"
  style={Object {}}
>
  <div
    className="c1 muya-menu-menu"
  >
    <div
      className="c2 c3 muya-menu-menu-scroll-wrapper"
    >
      <div
        aria-describedby={null}
        className="c4 c5 muya-menu-item"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={Object {}}
      >
        <div
          className="c6 muya-menu-item-content"
        >
          <svg
            aria-hidden="false"
            className="c7 c8"
            focusable="false"
            viewBox="0 0 1024 1024"
          >
            <path
              d="M362.667 10.667A21.333 21.333 0 01384 32v74.667h256V32a21.333 21.333 0 0121.333-21.333H768A21.333 21.333 0 01789.333 32v74.667h213.334A21.333 21.333 0 011024 128v864a21.333 21.333 0 01-21.333 21.333H21.333A21.333 21.333 0 010 992V128a21.333 21.333 0 0121.333-21.333h213.334V32A21.333 21.333 0 01256 10.667h106.667zm512 512H149.333V864h725.334V522.667zM234.667 256h-85.334v117.333h725.334V256h-85.334v53.333A21.333 21.333 0 01768 330.667H661.333A21.333 21.333 0 01640 309.333V256H384v53.333a21.333 21.333 0 01-21.333 21.334H256a21.333 21.333 0 01-21.333-21.334V256z"
            />
          </svg>
          <span
            className="c9 c10 muya-menu-item-text"
          >
            <span>
              Item 1
            </span>
          </span>
        </div>
      </div>
      <div
        className="c11 c12 muya-menu-group"
        style={Object {}}
      >
        <div
          aria-describedby={null}
          className="c4 c13 muya-menu-item"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          style={Object {}}
        >
          <div
            className="c6 muya-menu-item-content"
          >
            <svg
              aria-hidden="false"
              className="c7 c8"
              focusable="false"
              viewBox="0 0 1024 1024"
            >
              <path
                d="M517.707 533.333c-141.206 0-251.04-109.834-251.04-239.626 0-141.206 109.834-251.04 251.04-251.04 129.792 0 239.626 109.834 239.626 251.04 0 129.792-109.834 239.626-239.626 239.626zm-389.707 64h768a85.333 85.333 0 0185.333 85.334V960A21.333 21.333 0 01960 981.333H64A21.333 21.333 0 0142.667 960V682.667A85.333 85.333 0 01128 597.333z"
              />
            </svg>
            <span
              className="c9 c10 muya-menu-item-text"
            >
              <span>
                Item 2
              </span>
            </span>
          </div>
        </div>
        <div
          aria-describedby={null}
          className="c4 c13 muya-menu-item"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          style={Object {}}
        >
          <div
            className="c6 muya-menu-item-content"
          >
            <svg
              aria-hidden="false"
              className="c7 c8"
              focusable="false"
              viewBox="0 0 1024 1024"
            >
              <path
                d="M853.333 704h64a21.333 21.333 0 0121.334 21.333V832a21.333 21.333 0 01-21.334 21.333H106.667A21.333 21.333 0 0185.333 832V725.333A21.333 21.333 0 01106.667 704h64V341.333C170.667 152.821 323.488 0 512 0c188.512 0 341.333 152.821 341.333 341.333V704zm-468.81 213.333h254.944C633.6 977.131 578.773 1024 512 1024s-121.6-46.87-127.477-106.667z"
              />
            </svg>
            <span
              className="c9 c10 muya-menu-item-text"
            >
              <span>
                Item 3
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        className="c14 muya-menu-sub-menu"
        role="menuitem"
        style={Object {}}
      >
        <div
          aria-describedby={null}
          aria-expanded={false}
          aria-haspopup="true"
          className="c15 c16"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="c17 c18 muya-menu-sub-menu-title"
          >
            <div
              className="c19 "
            >
              <svg
                aria-hidden="false"
                className="c7 c8"
                focusable="false"
                viewBox="0 0 1024 1024"
              >
                <path
                  d="M21.333 42.667h376.384a21.333 21.333 0 0113.515 4.821l222.87 182.357a21.333 21.333 0 0013.514 4.822h355.05A21.333 21.333 0 011024 256v704a21.333 21.333 0 01-21.333 21.333H21.333A21.333 21.333 0 010 960V64a21.333 21.333 0 0121.333-21.333z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        className="c14 muya-menu-sub-menu"
        role="menuitem"
        style={Object {}}
      >
        <div
          aria-describedby={null}
          aria-expanded={false}
          aria-haspopup="true"
          className="c15 c16"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="c17 c18 muya-menu-sub-menu-title"
          >
            <div
              className="c19 "
            >
              <svg
                aria-hidden="false"
                className="c7 c8"
                focusable="false"
                viewBox="0 0 1024 1024"
              >
                <path
                  d="M21.333 42.667h376.384a21.333 21.333 0 0113.515 4.821l222.87 182.357a21.333 21.333 0 0013.514 4.822h355.05A21.333 21.333 0 011024 256v704a21.333 21.333 0 01-21.333 21.333H21.333A21.333 21.333 0 010 960V64a21.333 21.333 0 0121.333-21.333z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu 内嵌菜单和自定义 icon 渲染 1`] = `
.c11 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-style: normal;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  width: 1em;
  height: 1em;
  overflow: hidden;
  fill: currentColor;
}

.c31 {
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
}

.c33 {
  background: transparent;
  border: none;
  padding: 0;
  color: rgba(26,122,248,1);
  font-weight: 400;
  font-size: 14px;
  cursor: pointer;
}

.c33:hover {
  color: rgba(51,139,255,1);
}

.c33:active {
  color: rgba(12,108,235,1);
}

.c33 + .c32 {
  margin-left: 8px;
}

.c34.c34 {
  position: static;
}

.c14 {
  height: 0px;
  overflow: hidden;
}

.c14 > div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c14 > div > div {
  width: 100%;
}

.c13 {
  line-height: 0;
  -webkit-animation: cxSSXZ 150ms linear;
  animation: cxSSXZ 150ms linear;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  cursor: pointer;
}

.c24 {
  line-height: 0;
  -webkit-animation: bFXLB 150ms linear;
  animation: bFXLB 150ms linear;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  cursor: pointer;
}

.c35 .c10 {
  margin-right: 8px;
  font-size: 16px;
  color: rgba(204,204,204,1);
  -webkit-transition: color 150ms cubic-bezier(0.4,0,0.2,1);
  transition: color 150ms cubic-bezier(0.4,0,0.2,1);
}

.c35 .c15 .c17,
.c35 .c7,
.c35 .c25 .c27,
.c35 .c25 .c15 .c17 {
  margin: 0;
  padding: 0 16px;
}

.c35 .c2 {
  overflow-x: auto;
}

.c35 .c12 .c10 {
  margin-right: 0;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  width: 100%;
  font-size: 14px;
  line-height: 20px;
  font-variant: tabular-nums;
  font-feature-settings: 'tnum';
  padding: 0;
  color: rgba(102,102,102,1);
  background: transparent;
  outline: none;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  zoom: 1;
}

.c1 .c10 {
  margin-right: 8px;
  font-size: 16px;
  color: rgba(204,204,204,1);
  -webkit-transition: color 150ms cubic-bezier(0.4,0,0.2,1);
  transition: color 150ms cubic-bezier(0.4,0,0.2,1);
}

.c1 .c12 .c10 {
  margin-right: 0;
}

.c3 {
  overflow-x: hidden;
  overflow-y: auto;
}

.c23 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  line-height: 32px;
  margin: 4px 8px;
  padding: 0 8px;
  font-size: 14px;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  cursor: pointer;
}

.c23 .c9 {
  display: block;
  margin-right: 8px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c8 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  line-height: 32px;
  margin: 4px 8px;
  padding: 0 8px;
  font-size: 14px;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  cursor: pointer;
}

.c8 .c9 {
  display: block;
  margin-right: 8px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c8 .c10 {
  color: rgba(26,122,248,1);
}

.c6 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c36 > .c5 .c7 {
  color: rgba(102,102,102,1);
  background-color: transparent;
  font-weight: 400;
}

.c36 > .c5 .c7:hover {
  color: rgba(26,122,248,1);
  background-color: rgba(255,255,255,1);
}

.c36 > .c5 .c7:active {
  color: rgba(26,122,248,1);
  background-color: rgba(255,255,255,1);
}

.c36 > .c5 .c7 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  line-height: 20px;
  color: rgba(26,122,248,1);
}

.c36 > .c5 .c7:hover .c10 {
  color: rgba(26,122,248,1);
  -webkit-transition: color 150ms cubic-bezier(0.4,0,0.2,1);
  transition: color 150ms cubic-bezier(0.4,0,0.2,1);
}

.c36 > .c5 .c7 .c10 {
  color: rgba(26,122,248,1);
  -webkit-transition: color 150ms cubic-bezier(0.4,0,0.2,1);
  transition: color 150ms cubic-bezier(0.4,0,0.2,1);
}

.c4 {
  position: relative;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
}

.c4 > .c5 .c7 {
  color: rgba(26,122,248,1);
  background-color: rgba(26,122,248,0.04);
  font-weight: 600;
}

.c4 > .c5 .c7:hover {
  color: rgba(26,122,248,1);
  background-color: rgba(26,122,248,0.08);
}

.c4 > .c5 .c7:active {
  color: rgba(26,122,248,1);
  background-color: rgba(26,122,248,0.04);
}

.c22 {
  position: relative;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
}

.c22 > .c5 .c7 {
  color: rgba(102,102,102,1);
  background-color: transparent;
  font-weight: 400;
}

.c22 > .c5 .c7:hover {
  color: rgba(102,102,102,1);
  background-color: rgba(250,250,250,1);
}

.c22 > .c5 .c7:active {
  color: rgba(102,102,102,1);
  background-color: rgba(250,250,250,1);
}

.c30 {
  position: relative;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  padding-left: 24px;
}

.c30 > .c5 .c7 {
  color: rgba(102,102,102,1);
  background-color: transparent;
  font-weight: 400;
}

.c30 > .c5 .c7:hover {
  color: rgba(102,102,102,1);
  background-color: rgba(250,250,250,1);
}

.c30 > .c5 .c7:active {
  color: rgba(102,102,102,1);
  background-color: rgba(250,250,250,1);
}

.c19 {
  opacity: 1;
}

.c37 .c17 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 32px;
  line-height: 32px;
  margin: 4px 8px;
  padding: 0 8px;
  font-size: 14px;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  cursor: pointer;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  color: rgba(26,122,248,1);
  background-color: rgba(255,255,255,1);
  font-weight: 600;
}

.c37 .c17 .c10 {
  color: rgba(26,122,248,1);
}

.c37 .c17:hover {
  color: rgba(26,122,248,1);
  background-color: rgba(255,255,255,1);
}

.c37 .c17:active {
  color: rgba(26,122,248,1);
  background-color: rgba(255,255,255,1);
}

.c37 .c18 {
  -webkit-transition: opacity 150ms cubic-bezier(0.4,0,0.2,1),width 150ms cubic-bezier(0.4,0,0.2,1);
  transition: opacity 150ms cubic-bezier(0.4,0,0.2,1),width 150ms cubic-bezier(0.4,0,0.2,1);
}

.c37 .c18:only-child a {
  display: block;
}

.c37 .c17 {
  line-height: 20px;
}

.c37 .c17:hover .c10 {
  color: rgba(26,122,248,1);
  -webkit-transition: color 150ms cubic-bezier(0.4,0,0.2,1);
  transition: color 150ms cubic-bezier(0.4,0,0.2,1);
}

.c38 .c17 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 32px;
  line-height: 32px;
  margin: 4px 8px;
  padding: 0 8px;
  font-size: 14px;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  cursor: pointer;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  color: rgba(221,221,221,1);
  background-color: transparent;
  font-weight: 400;
  cursor: not-allowed;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c38 .c17:hover {
  color: rgba(221,221,221,1);
  background-color: transparent;
}

.c38 .c17:active {
  color: rgba(221,221,221,1);
  background-color: transparent;
}

.c38 .c18 {
  -webkit-transition: opacity 150ms cubic-bezier(0.4,0,0.2,1),width 150ms cubic-bezier(0.4,0,0.2,1);
  transition: opacity 150ms cubic-bezier(0.4,0,0.2,1),width 150ms cubic-bezier(0.4,0,0.2,1);
}

.c38 .c18:only-child a {
  display: block;
}

.c38 .c17 {
  line-height: 20px;
}

.c39 .c17 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 32px;
  line-height: 32px;
  margin: 4px 8px;
  padding: 0 8px;
  font-size: 14px;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  cursor: pointer;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  color: rgba(102,102,102,1);
  background-color: transparent;
  font-weight: 400;
}

.c39 .c17:hover {
  color: rgba(26,122,248,1);
  background-color: rgba(255,255,255,1);
}

.c39 .c17:active {
  color: rgba(26,122,248,1);
  background-color: rgba(255,255,255,1);
}

.c39 .c18 {
  -webkit-transition: opacity 150ms cubic-bezier(0.4,0,0.2,1),width 150ms cubic-bezier(0.4,0,0.2,1);
  transition: opacity 150ms cubic-bezier(0.4,0,0.2,1),width 150ms cubic-bezier(0.4,0,0.2,1);
}

.c39 .c18:only-child a {
  display: block;
}

.c39 .c17 {
  line-height: 20px;
}

.c39 .c17:hover .c10 {
  color: rgba(26,122,248,1);
  -webkit-transition: color 150ms cubic-bezier(0.4,0,0.2,1);
  transition: color 150ms cubic-bezier(0.4,0,0.2,1);
}

.c16 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c16 .c17 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 32px;
  line-height: 32px;
  margin: 4px 8px;
  padding: 0 8px;
  font-size: 14px;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  cursor: pointer;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  padding-left: 32px;
  color: rgba(26,122,248,1);
  background-color: rgba(26,122,248,0.04);
  font-weight: 600;
}

.c16 .c17 .c10 {
  color: rgba(26,122,248,1);
}

.c16 .c17:hover {
  color: rgba(26,122,248,1);
  background-color: rgba(26,122,248,0.08);
}

.c16 .c17:active {
  color: rgba(26,122,248,1);
  background-color: rgba(26,122,248,0.04);
}

.c16 .c18 {
  -webkit-transition: opacity 150ms cubic-bezier(0.4,0,0.2,1),width 150ms cubic-bezier(0.4,0,0.2,1);
  transition: opacity 150ms cubic-bezier(0.4,0,0.2,1),width 150ms cubic-bezier(0.4,0,0.2,1);
}

.c16 .c18:only-child a {
  display: block;
}

.c16 a {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c16 a::before {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: transparent;
  content: '';
}

.c20 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c20 .c17 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 32px;
  line-height: 32px;
  margin: 4px 8px;
  padding: 0 8px;
  font-size: 14px;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  cursor: pointer;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  padding-left: 32px;
  color: rgba(102,102,102,1);
  background-color: transparent;
  font-weight: 400;
}

.c20 .c17:hover {
  color: rgba(102,102,102,1);
  background-color: rgba(250,250,250,1);
}

.c20 .c17:active {
  color: rgba(102,102,102,1);
  background-color: rgba(250,250,250,1);
}

.c20 .c18 {
  -webkit-transition: opacity 150ms cubic-bezier(0.4,0,0.2,1),width 150ms cubic-bezier(0.4,0,0.2,1);
  transition: opacity 150ms cubic-bezier(0.4,0,0.2,1),width 150ms cubic-bezier(0.4,0,0.2,1);
}

.c20 .c18:only-child a {
  display: block;
}

.c20 a {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c20 a::before {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: transparent;
  content: '';
}

.c21 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c21 .c17 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 32px;
  line-height: 32px;
  margin: 4px 8px;
  padding: 0 8px;
  font-size: 14px;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  cursor: pointer;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  padding-left: 32px;
  color: rgba(221,221,221,1);
  background-color: transparent;
  font-weight: 400;
  cursor: not-allowed;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c21 .c17:hover {
  color: rgba(221,221,221,1);
  background-color: transparent;
}

.c21 .c17:active {
  color: rgba(221,221,221,1);
  background-color: transparent;
}

.c21 .c18 {
  -webkit-transition: opacity 150ms cubic-bezier(0.4,0,0.2,1),width 150ms cubic-bezier(0.4,0,0.2,1);
  transition: opacity 150ms cubic-bezier(0.4,0,0.2,1),width 150ms cubic-bezier(0.4,0,0.2,1);
}

.c21 .c18:only-child a {
  display: block;
}

.c21 a {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c21 a::before {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: transparent;
  content: '';
}

.c29 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c29 .c17 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 32px;
  line-height: 32px;
  margin: 4px 8px;
  padding: 0 8px;
  font-size: 14px;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  cursor: pointer;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  padding-left: 20px;
  color: rgba(102,102,102,1);
  background-color: transparent;
  font-weight: 400;
}

.c29 .c17:hover {
  color: rgba(102,102,102,1);
  background-color: rgba(250,250,250,1);
}

.c29 .c17:active {
  color: rgba(102,102,102,1);
  background-color: rgba(250,250,250,1);
}

.c29 .c18 {
  -webkit-transition: opacity 150ms cubic-bezier(0.4,0,0.2,1),width 150ms cubic-bezier(0.4,0,0.2,1);
  transition: opacity 150ms cubic-bezier(0.4,0,0.2,1),width 150ms cubic-bezier(0.4,0,0.2,1);
}

.c29 .c18:only-child a {
  display: block;
}

.c29 a {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c29 a::before {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: transparent;
  content: '';
}

.c26 {
  padding-left: 24px;
}

.c26 .c27 {
  display: block;
  box-sizing: border-box;
  font-size: 12px;
  line-height: 16px;
  height: 34px;
  background: transparent;
  color: rgba(153,153,153,1);
  padding: 16px 16px 0;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c26 > .c15 .c17 {
  padding-left: 8px;
}

.c28 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 {
  height: 100%;
  background: rgba(255,255,255,1);
  border-radius: 4px;
  padding: 0;
  overflow: auto;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  width: 100%;
  width: 200px;
}

.c0::-webkit-scrollbar {
  width: 4px;
  height: 4px;
}

.c0::-webkit-scrollbar-thumb {
  border-radius: 999rem;
  background-color: transparent;
}

.c0:hover::-webkit-scrollbar-thumb {
  background-color: rgba(51,51,51,0.12);
}

.c0:hover::-webkit-scrollbar-thumb:hover {
  background-color: rgba(51,51,51,0.16);
}

.c0 .c40 {
  background: rgba(238,238,238,1);
  margin: 5.5px 16px;
}

<div
  className="c0 muya-menu-wrapper custom-wrapper"
  style={Object {}}
>
  <div
    className="c1 muya-menu-menu custom-menu"
  >
    <div
      className="c2 c3 muya-menu-menu-scroll-wrapper custom-menu-scroll-wrapper"
    >
      <div
        className="c4 muya-menu-sub-menu custom-sub-menu-own"
        role="menuitem"
        style={Object {}}
      >
        <div
          aria-expanded={true}
          aria-haspopup="true"
          className="c5 c6"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="c7 c8 muya-menu-sub-menu-title custom-sub-menu-title-own"
          >
            <div
              className="c9 "
            >
              <svg
                aria-hidden="false"
                className="c10 c11"
                focusable="false"
                viewBox="0 0 1024 1024"
              >
                <path
                  d="M21.333 42.667h376.384a21.333 21.333 0 0113.515 4.821l222.87 182.357a21.333 21.333 0 0013.514 4.822h355.05A21.333 21.333 0 011024 256v704a21.333 21.333 0 01-21.333 21.333H21.333A21.333 21.333 0 010 960V64a21.333 21.333 0 0121.333-21.333z"
                />
              </svg>
              <span>
                导航一
              </span>
            </div>
            <div
              className="c12 c13"
            >
              <svg
                aria-hidden="false"
                className="c10 c11"
                focusable="false"
                viewBox="0 0 1024 1024"
              >
                <path
                  d="M437.333 437.333V64a21.333 21.333 0 0121.334-21.333h106.666A21.333 21.333 0 01586.667 64v373.333H960a21.333 21.333 0 0121.333 21.334v106.666A21.333 21.333 0 01960 586.667H586.667V960a21.333 21.333 0 01-21.334 21.333H458.667A21.333 21.333 0 01437.333 960V586.667H64a21.333 21.333 0 01-21.333-21.334V458.667A21.333 21.333 0 0164 437.333h373.333z"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          className="c14 entered"
          style={
            Object {
              "height": "auto",
              "overflow": "visible",
              "transitionDuration": "150ms",
              "transitionProperty": "height",
              "transitionTimingFunction": "linear",
            }
          }
        >
          <div>
            <div>
              <div
                className="c1 muya-menu-menu custom-menu-own"
              >
                <div
                  className="c2 c3 muya-menu-menu-scroll-wrapper custom-menu-scroll-wrapper-own"
                >
                  <div
                    className="c15 c16 muya-menu-item custom-item-own"
                    onClick={[Function]}
                    style={Object {}}
                  >
                    <div
                      className="c17 muya-menu-item-content custom-item-content-own"
                    >
                      <svg
                        aria-hidden="false"
                        className="c10 c11"
                        focusable="false"
                        viewBox="0 0 1024 1024"
                      >
                        <path
                          d="M21.333 42.667h376.384a21.333 21.333 0 0113.515 4.821l222.87 182.357a21.333 21.333 0 0013.514 4.822h355.05A21.333 21.333 0 011024 256v704a21.333 21.333 0 01-21.333 21.333H21.333A21.333 21.333 0 010 960V64a21.333 21.333 0 0121.333-21.333z"
                        />
                      </svg>
                      <span
                        className="c18 c19 muya-menu-item-text custom-item-text-own"
                      >
                        Item 1
                      </span>
                    </div>
                  </div>
                  <div
                    className="c15 c20 muya-menu-item custom-item"
                    onClick={[Function]}
                    style={Object {}}
                  >
                    <div
                      className="c17 muya-menu-item-content custom-item-content"
                    >
                      <svg
                        aria-hidden="false"
                        className="c10 c11"
                        focusable="false"
                        viewBox="0 0 1024 1024"
                      >
                        <path
                          d="M21.333 42.667h376.384a21.333 21.333 0 0113.515 4.821l222.87 182.357a21.333 21.333 0 0013.514 4.822h355.05A21.333 21.333 0 011024 256v704a21.333 21.333 0 01-21.333 21.333H21.333A21.333 21.333 0 010 960V64a21.333 21.333 0 0121.333-21.333z"
                        />
                      </svg>
                      <span
                        className="c18 c19 muya-menu-item-text custom-item-text"
                      >
                        Item 2
                      </span>
                    </div>
                  </div>
                  <div
                    className="c15 c20 muya-menu-item custom-item"
                    onClick={[Function]}
                    style={Object {}}
                  >
                    <div
                      className="c17 muya-menu-item-content custom-item-content"
                    >
                      <svg
                        aria-hidden="false"
                        className="c10 c11"
                        focusable="false"
                        viewBox="0 0 1024 1024"
                      >
                        <path
                          d="M21.333 42.667h376.384a21.333 21.333 0 0113.515 4.821l222.87 182.357a21.333 21.333 0 0013.514 4.822h355.05A21.333 21.333 0 011024 256v704a21.333 21.333 0 01-21.333 21.333H21.333A21.333 21.333 0 010 960V64a21.333 21.333 0 0121.333-21.333z"
                        />
                      </svg>
                      <span
                        className="c18 c19 muya-menu-item-text custom-item-text"
                      >
                        Item 3
                      </span>
                    </div>
                  </div>
                  <div
                    className="c15 c21 muya-menu-item custom-item"
                    onClick={[Function]}
                    style={Object {}}
                  >
                    <div
                      className="c17 muya-menu-item-content custom-item-content"
                    >
                      <svg
                        aria-hidden="false"
                        className="c10 c11"
                        focusable="false"
                        viewBox="0 0 1024 1024"
                      >
                        <path
                          d="M21.333 42.667h376.384a21.333 21.333 0 0113.515 4.821l222.87 182.357a21.333 21.333 0 0013.514 4.822h355.05A21.333 21.333 0 011024 256v704a21.333 21.333 0 01-21.333 21.333H21.333A21.333 21.333 0 010 960V64a21.333 21.333 0 0121.333-21.333z"
                        />
                      </svg>
                      <span
                        className="c18 c19 muya-menu-item-text custom-item-text"
                      >
                        Item 4
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="c22 muya-menu-sub-menu custom-sub-menu"
        role="menuitem"
        style={Object {}}
      >
        <div
          aria-expanded={false}
          aria-haspopup="true"
          className="c5 c6"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="c7 c23 muya-menu-sub-menu-title custom-sub-menu-title"
          >
            <div
              className="c9 "
            >
              <svg
                aria-hidden="false"
                className="c10 c11"
                focusable="false"
                viewBox="0 0 1024 1024"
              >
                <path
                  d="M21.333 42.667h376.384a21.333 21.333 0 0113.515 4.821l222.87 182.357a21.333 21.333 0 0013.514 4.822h355.05A21.333 21.333 0 011024 256v704a21.333 21.333 0 01-21.333 21.333H21.333A21.333 21.333 0 010 960V64a21.333 21.333 0 0121.333-21.333z"
                />
              </svg>
              <span>
                导航二
              </span>
            </div>
            <div
              className="c12 c24"
            >
              <svg
                aria-hidden="false"
                className="c10 c11"
                focusable="false"
                viewBox="0 0 1024 1024"
              >
                <path
                  d="M437.333 437.333V64a21.333 21.333 0 0121.334-21.333h106.666A21.333 21.333 0 01586.667 64v373.333H960a21.333 21.333 0 0121.333 21.334v106.666A21.333 21.333 0 01960 586.667H586.667V960a21.333 21.333 0 01-21.334 21.333H458.667A21.333 21.333 0 01437.333 960V586.667H64a21.333 21.333 0 01-21.333-21.334V458.667A21.333 21.333 0 0164 437.333h373.333z"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          className="c14 exited"
          style={
            Object {
              "height": "0px",
              "transitionDuration": "150ms",
              "transitionProperty": "height",
              "transitionTimingFunction": "linear",
            }
          }
        >
          <div>
            <div>
              <div
                className="c1 muya-menu-menu custom-menu"
              >
                <div
                  className="c2 c3 muya-menu-menu-scroll-wrapper custom-menu-scroll-wrapper"
                >
                  <div
                    className="c25 c26 muya-menu-group custom-group-own"
                    style={Object {}}
                  >
                    <div
                      className="c27 c28 muya-menu-group-label custom-group-label-own"
                    >
                      group 1
                    </div>
                    <div
                      className="c15 c29 muya-menu-item custom-item"
                      onClick={[Function]}
                      style={Object {}}
                    >
                      <div
                        className="c17 muya-menu-item-content custom-item-content"
                      >
                        <svg
                          aria-hidden="false"
                          className="c10 c11"
                          focusable="false"
                          viewBox="0 0 1024 1024"
                        >
                          <path
                            d="M21.333 42.667h376.384a21.333 21.333 0 0113.515 4.821l222.87 182.357a21.333 21.333 0 0013.514 4.822h355.05A21.333 21.333 0 011024 256v704a21.333 21.333 0 01-21.333 21.333H21.333A21.333 21.333 0 010 960V64a21.333 21.333 0 0121.333-21.333z"
                          />
                        </svg>
                        <span
                          className="c18 c19 muya-menu-item-text custom-item-text"
                        >
                          Item 5
                        </span>
                      </div>
                    </div>
                    <div
                      className="c15 c29 muya-menu-item custom-item"
                      onClick={[Function]}
                      style={Object {}}
                    >
                      <div
                        className="c17 muya-menu-item-content custom-item-content"
                      >
                        <svg
                          aria-hidden="false"
                          className="c10 c11"
                          focusable="false"
                          viewBox="0 0 1024 1024"
                        >
                          <path
                            d="M21.333 42.667h376.384a21.333 21.333 0 0113.515 4.821l222.87 182.357a21.333 21.333 0 0013.514 4.822h355.05A21.333 21.333 0 011024 256v704a21.333 21.333 0 01-21.333 21.333H21.333A21.333 21.333 0 010 960V64a21.333 21.333 0 0121.333-21.333z"
                          />
                        </svg>
                        <span
                          className="c18 c19 muya-menu-item-text custom-item-text"
                        >
                          Item 6
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    className="c30 muya-menu-sub-menu custom-sub-menu"
                    role="menuitem"
                    style={Object {}}
                  >
                    <div
                      aria-expanded={false}
                      aria-haspopup="true"
                      className="c5 c6"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      title="二级导航"
                    >
                      <div
                        className="c7 c23 muya-menu-sub-menu-title custom-sub-menu-title"
                      >
                        <div
                          className="c9 "
                        >
                          <svg
                            aria-hidden="false"
                            className="c10 c11"
                            focusable="false"
                            viewBox="0 0 1024 1024"
                          >
                            <path
                              d="M21.333 42.667h376.384a21.333 21.333 0 0113.515 4.821l222.87 182.357a21.333 21.333 0 0013.514 4.822h355.05A21.333 21.333 0 011024 256v704a21.333 21.333 0 01-21.333 21.333H21.333A21.333 21.333 0 010 960V64a21.333 21.333 0 0121.333-21.333z"
                            />
                          </svg>
                          二级导航
                        </div>
                        <div
                          className="c12 c24"
                        >
                          <svg
                            aria-hidden="false"
                            className="c10 c11"
                            focusable="false"
                            viewBox="0 0 1024 1024"
                          >
                            <path
                              d="M437.333 437.333V64a21.333 21.333 0 0121.334-21.333h106.666A21.333 21.333 0 01586.667 64v373.333H960a21.333 21.333 0 0121.333 21.334v106.666A21.333 21.333 0 01960 586.667H586.667V960a21.333 21.333 0 01-21.334 21.333H458.667A21.333 21.333 0 01437.333 960V586.667H64a21.333 21.333 0 01-21.333-21.334V458.667A21.333 21.333 0 0164 437.333h373.333z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                    <div
                      className="c14 exited"
                      style={
                        Object {
                          "height": "0px",
                          "transitionDuration": "150ms",
                          "transitionProperty": "height",
                          "transitionTimingFunction": "linear",
                        }
                      }
                    >
                      <div>
                        <div>
                          <div
                            className="c1 muya-menu-menu custom-menu"
                          >
                            <div
                              className="c2 c3 muya-menu-menu-scroll-wrapper custom-menu-scroll-wrapper"
                            >
                              <div
                                className="c15 c20 muya-menu-item custom-item"
                                onClick={[Function]}
                                style={Object {}}
                              >
                                <div
                                  className="c17 muya-menu-item-content custom-item-content"
                                >
                                  <svg
                                    aria-hidden="false"
                                    className="c10 c11"
                                    focusable="false"
                                    viewBox="0 0 1024 1024"
                                  >
                                    <path
                                      d="M21.333 42.667h376.384a21.333 21.333 0 0113.515 4.821l222.87 182.357a21.333 21.333 0 0013.514 4.822h355.05A21.333 21.333 0 011024 256v704a21.333 21.333 0 01-21.333 21.333H21.333A21.333 21.333 0 010 960V64a21.333 21.333 0 0121.333-21.333z"
                                    />
                                  </svg>
                                  <span
                                    className="c18 c19 muya-menu-item-text custom-item-text"
                                  >
                                    Item 7
                                  </span>
                                </div>
                              </div>
                              <div
                                className="c15 c20 muya-menu-item custom-item"
                                onClick={[Function]}
                                style={Object {}}
                              >
                                <div
                                  className="c17 muya-menu-item-content custom-item-content"
                                >
                                  <svg
                                    aria-hidden="false"
                                    className="c10 c11"
                                    focusable="false"
                                    viewBox="0 0 1024 1024"
                                  >
                                    <path
                                      d="M21.333 42.667h376.384a21.333 21.333 0 0113.515 4.821l222.87 182.357a21.333 21.333 0 0013.514 4.822h355.05A21.333 21.333 0 011024 256v704a21.333 21.333 0 01-21.333 21.333H21.333A21.333 21.333 0 010 960V64a21.333 21.333 0 0121.333-21.333z"
                                    />
                                  </svg>
                                  <span
                                    className="c18 c19 muya-menu-item-text custom-item-text"
                                  >
                                    Item 8
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="c22 muya-menu-sub-menu custom-sub-menu"
        role="menuitem"
        style={Object {}}
      >
        <div
          aria-expanded={false}
          aria-haspopup="true"
          className="c5 c6"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="c7 c23 muya-menu-sub-menu-title custom-sub-menu-title"
          >
            <div
              className="c9 "
            >
              <svg
                aria-hidden="false"
                className="c10 c11"
                focusable="false"
                viewBox="0 0 1024 1024"
              >
                <path
                  d="M21.333 42.667h376.384a21.333 21.333 0 0113.515 4.821l222.87 182.357a21.333 21.333 0 0013.514 4.822h355.05A21.333 21.333 0 011024 256v704a21.333 21.333 0 01-21.333 21.333H21.333A21.333 21.333 0 010 960V64a21.333 21.333 0 0121.333-21.333z"
                />
              </svg>
              <span>
                导航三
              </span>
            </div>
            <div
              className="c12 c24"
            >
              <svg
                aria-hidden="false"
                className="c10 c11"
                focusable="false"
                viewBox="0 0 1024 1024"
              >
                <path
                  d="M437.333 437.333V64a21.333 21.333 0 0121.334-21.333h106.666A21.333 21.333 0 01586.667 64v373.333H960a21.333 21.333 0 0121.333 21.334v106.666A21.333 21.333 0 01960 586.667H586.667V960a21.333 21.333 0 01-21.334 21.333H458.667A21.333 21.333 0 01437.333 960V586.667H64a21.333 21.333 0 01-21.333-21.334V458.667A21.333 21.333 0 0164 437.333h373.333z"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          className="c14 exited"
          style={
            Object {
              "height": "0px",
              "transitionDuration": "150ms",
              "transitionProperty": "height",
              "transitionTimingFunction": "linear",
            }
          }
        >
          <div>
            <div>
              <div
                className="c1 muya-menu-menu custom-menu"
              >
                <div
                  className="c2 c3 muya-menu-menu-scroll-wrapper custom-menu-scroll-wrapper"
                >
                  <div
                    className="c15 c20 muya-menu-item custom-item"
                    onClick={[Function]}
                    style={Object {}}
                  >
                    <div
                      className="c17 muya-menu-item-content custom-item-content"
                    >
                      <svg
                        aria-hidden="false"
                        className="c10 c11"
                        focusable="false"
                        viewBox="0 0 1024 1024"
                      >
                        <path
                          d="M21.333 42.667h376.384a21.333 21.333 0 0113.515 4.821l222.87 182.357a21.333 21.333 0 0013.514 4.822h355.05A21.333 21.333 0 011024 256v704a21.333 21.333 0 01-21.333 21.333H21.333A21.333 21.333 0 010 960V64a21.333 21.333 0 0121.333-21.333z"
                        />
                      </svg>
                      <span
                        className="c18 c19 muya-menu-item-text custom-item-text"
                      >
                        Item 9
                      </span>
                    </div>
                  </div>
                  <div
                    className="c15 c20 muya-menu-item custom-item"
                    onClick={[Function]}
                    style={Object {}}
                  >
                    <div
                      className="c17 muya-menu-item-content custom-item-content"
                    >
                      <svg
                        aria-hidden="false"
                        className="c10 c11"
                        focusable="false"
                        viewBox="0 0 1024 1024"
                      >
                        <path
                          d="M21.333 42.667h376.384a21.333 21.333 0 0113.515 4.821l222.87 182.357a21.333 21.333 0 0013.514 4.822h355.05A21.333 21.333 0 011024 256v704a21.333 21.333 0 01-21.333 21.333H21.333A21.333 21.333 0 010 960V64a21.333 21.333 0 0121.333-21.333z"
                        />
                      </svg>
                      <span
                        className="c18 c19 muya-menu-item-text custom-item-text"
                      >
                        Item 10
                      </span>
                    </div>
                  </div>
                  <div
                    className="c15 c20 muya-menu-item custom-item"
                    onClick={[Function]}
                    style={Object {}}
                  >
                    <div
                      className="c17 muya-menu-item-content custom-item-content"
                    >
                      <svg
                        aria-hidden="false"
                        className="c10 c11"
                        focusable="false"
                        viewBox="0 0 1024 1024"
                      >
                        <path
                          d="M21.333 42.667h376.384a21.333 21.333 0 0113.515 4.821l222.87 182.357a21.333 21.333 0 0013.514 4.822h355.05A21.333 21.333 0 011024 256v704a21.333 21.333 0 01-21.333 21.333H21.333A21.333 21.333 0 010 960V64a21.333 21.333 0 0121.333-21.333z"
                        />
                      </svg>
                      <span
                        className="c18 c19 muya-menu-item-text custom-item-text"
                      >
                        Item 11
                      </span>
                    </div>
                  </div>
                  <div
                    className="c15 c20 muya-menu-item custom-item"
                    onClick={[Function]}
                    style={Object {}}
                  >
                    <div
                      className="c17 muya-menu-item-content custom-item-content"
                    >
                      <svg
                        aria-hidden="false"
                        className="c10 c11"
                        focusable="false"
                        viewBox="0 0 1024 1024"
                      >
                        <path
                          d="M21.333 42.667h376.384a21.333 21.333 0 0113.515 4.821l222.87 182.357a21.333 21.333 0 0013.514 4.822h355.05A21.333 21.333 0 011024 256v704a21.333 21.333 0 01-21.333 21.333H21.333A21.333 21.333 0 010 960V64a21.333 21.333 0 0121.333-21.333z"
                        />
                      </svg>
                      <span
                        className="c18 c19 muya-menu-item-text custom-item-text"
                      >
                        <a
                          aria-disabled={false}
                          className="c31 c32 c33 c34"
                          href="http://www.kujiale.com"
                          onClick={[Function]}
                          role="button"
                          target="_blank"
                        >
                          Item 12
                        </a>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu 垂直菜单 1`] = `
.c13 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-style: normal;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  width: 1em;
  height: 1em;
  overflow: hidden;
  fill: currentColor;
}

.c11 {
  line-height: 0;
  -webkit-animation: louXyM 150ms linear;
  animation: louXyM 150ms linear;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  cursor: pointer;
}

.c14 .c12 {
  margin-right: 8px;
  font-size: 16px;
  color: rgba(204,204,204,1);
  -webkit-transition: color 150ms cubic-bezier(0.4,0,0.2,1);
  transition: color 150ms cubic-bezier(0.4,0,0.2,1);
}

.c14 .c23 .c22,
.c14 .c7,
.c14 .StyledMenuItemGroup-cXVagK .StyledMenuItemGroupLabel-juktNM,
.c14 .StyledMenuItemGroup-cXVagK .c23 .c22 {
  margin: 0;
  padding: 0 16px;
}

.c14 .c2 {
  overflow-x: auto;
}

.c14 .c10 .c12 {
  margin-right: 0;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  width: 100%;
  font-size: 14px;
  line-height: 20px;
  font-variant: tabular-nums;
  font-feature-settings: 'tnum';
  padding: 0;
  color: rgba(102,102,102,1);
  background: transparent;
  outline: none;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  zoom: 1;
}

.c1 .c12 {
  margin-right: 8px;
  font-size: 16px;
  color: rgba(204,204,204,1);
  -webkit-transition: color 150ms cubic-bezier(0.4,0,0.2,1);
  transition: color 150ms cubic-bezier(0.4,0,0.2,1);
}

.c1 .c10 .c12 {
  margin-right: 0;
}

.c3 {
  overflow-x: hidden;
  overflow-y: auto;
}

.c8 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  line-height: 32px;
  margin: 4px 8px;
  padding: 0 8px;
  font-size: 14px;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  cursor: pointer;
}

.c8 .c9 {
  display: block;
  margin-right: 8px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c15 .c9 {
  display: block;
  margin-right: 8px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c15 .c12 {
  color: rgba(26,122,248,1);
}

.c6 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c16 > .c5 .c7 {
  color: rgba(102,102,102,1);
  background-color: transparent;
  font-weight: 400;
}

.c16 > .c5 .c7:hover {
  color: rgba(26,122,248,1);
  background-color: rgba(255,255,255,1);
}

.c16 > .c5 .c7:active {
  color: rgba(26,122,248,1);
  background-color: rgba(255,255,255,1);
}

.c16 > .c5 .c7 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  line-height: 20px;
  color: rgba(26,122,248,1);
}

.c16 > .c5 .c7:hover .c12 {
  color: rgba(26,122,248,1);
  -webkit-transition: color 150ms cubic-bezier(0.4,0,0.2,1);
  transition: color 150ms cubic-bezier(0.4,0,0.2,1);
}

.c16 > .c5 .c7 .c12 {
  color: rgba(26,122,248,1);
  -webkit-transition: color 150ms cubic-bezier(0.4,0,0.2,1);
  transition: color 150ms cubic-bezier(0.4,0,0.2,1);
}

.c17 > .c5 .c7 {
  color: rgba(26,122,248,1);
  background-color: rgba(26,122,248,0.04);
  font-weight: 600;
}

.c17 > .c5 .c7:hover {
  color: rgba(26,122,248,1);
  background-color: rgba(26,122,248,0.08);
}

.c17 > .c5 .c7:active {
  color: rgba(26,122,248,1);
  background-color: rgba(26,122,248,0.04);
}

.c4 {
  position: relative;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
}

.c4 > .c5 .c7 {
  color: rgba(102,102,102,1);
  background-color: transparent;
  font-weight: 400;
}

.c4 > .c5 .c7:hover {
  color: rgba(102,102,102,1);
  background-color: rgba(250,250,250,1);
}

.c4 > .c5 .c7:active {
  color: rgba(102,102,102,1);
  background-color: rgba(250,250,250,1);
}

.c18 > .c5 .c7 {
  color: rgba(102,102,102,1);
  background-color: transparent;
  font-weight: 400;
}

.c18 > .c5 .c7:hover {
  color: rgba(102,102,102,1);
  background-color: rgba(250,250,250,1);
}

.c18 > .c5 .c7:active {
  color: rgba(102,102,102,1);
  background-color: rgba(250,250,250,1);
}

.c19 .c22 .c12 {
  color: rgba(26,122,248,1);
}

.c19 .c22:hover .c12 {
  color: rgba(26,122,248,1);
  -webkit-transition: color 150ms cubic-bezier(0.4,0,0.2,1);
  transition: color 150ms cubic-bezier(0.4,0,0.2,1);
}

.c20 .c22:hover .c12 {
  color: rgba(26,122,248,1);
  -webkit-transition: color 150ms cubic-bezier(0.4,0,0.2,1);
  transition: color 150ms cubic-bezier(0.4,0,0.2,1);
}

.c21 .c22 .c12 {
  color: rgba(26,122,248,1);
}

.c0 {
  height: 100%;
  background: rgba(255,255,255,1);
  border-radius: 4px;
  padding: 0;
  overflow: auto;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  width: 200px;
  box-shadow: 0 0 12px 0 rgba(102,102,102,0.12);
}

.c0::-webkit-scrollbar {
  width: 4px;
  height: 4px;
}

.c0::-webkit-scrollbar-thumb {
  border-radius: 999rem;
  background-color: transparent;
}

.c0:hover::-webkit-scrollbar-thumb {
  background-color: rgba(51,51,51,0.12);
}

.c0:hover::-webkit-scrollbar-thumb:hover {
  background-color: rgba(51,51,51,0.16);
}

.c0 .c24 {
  background: rgba(238,238,238,1);
  margin: 5.5px 16px;
}

<div
  className="c0 muya-menu-wrapper"
  style={Object {}}
>
  <div
    className="c1 muya-menu-menu"
  >
    <div
      className="c2 c3 muya-menu-menu-scroll-wrapper"
    >
      <div
        className="c4 muya-menu-sub-menu"
        role="menuitem"
        style={Object {}}
      >
        <div
          aria-describedby={null}
          aria-expanded={false}
          aria-haspopup="true"
          className="c5 c6"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="c7 c8 muya-menu-sub-menu-title"
          >
            <div
              className="c9 "
            >
              <span>
                导航一
              </span>
            </div>
            <div
              className="c10 c11"
            >
              <svg
                aria-hidden="false"
                className="c12 c13"
                focusable="false"
                style={
                  Object {
                    "color": "rgba(204,204,204,1)",
                    "height": 8,
                    "width": 8,
                  }
                }
                viewBox="0 0 1024 1024"
              >
                <path
                  d="M832.267 277.333H189.46a21.333 21.333 0 00-17.685 33.259l306.09 453.76a21.333 21.333 0 0034.817.779L849.387 311.36a21.333 21.333 0 00-17.12-34.027z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        className="c4 muya-menu-sub-menu"
        role="menuitem"
        style={Object {}}
      >
        <div
          aria-describedby={null}
          aria-expanded={false}
          aria-haspopup="true"
          className="c5 c6"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="c7 c8 muya-menu-sub-menu-title"
          >
            <div
              className="c9 "
            >
              <span>
                导航二
              </span>
            </div>
            <div
              className="c10 c11"
            >
              <svg
                aria-hidden="false"
                className="c12 c13"
                focusable="false"
                style={
                  Object {
                    "color": "rgba(204,204,204,1)",
                    "height": 8,
                    "width": 8,
                  }
                }
                viewBox="0 0 1024 1024"
              >
                <path
                  d="M832.267 277.333H189.46a21.333 21.333 0 00-17.685 33.259l306.09 453.76a21.333 21.333 0 0034.817.779L849.387 311.36a21.333 21.333 0 00-17.12-34.027z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        className="c4 muya-menu-sub-menu"
        role="menuitem"
        style={Object {}}
      >
        <div
          aria-describedby="sub4"
          aria-expanded={true}
          aria-haspopup="true"
          className="c5 c6"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="c7 c8 muya-menu-sub-menu-title"
          >
            <div
              className="c9 "
            >
              <span>
                导航三
              </span>
            </div>
            <div
              className="c10 c11"
            >
              <svg
                aria-hidden="false"
                className="c12 c13"
                focusable="false"
                style={
                  Object {
                    "color": "rgba(204,204,204,1)",
                    "height": 8,
                    "width": 8,
                  }
                }
                viewBox="0 0 1024 1024"
              >
                <path
                  d="M832.267 277.333H189.46a21.333 21.333 0 00-17.685 33.259l306.09 453.76a21.333 21.333 0 0034.817.779L849.387 311.36a21.333 21.333 0 00-17.12-34.027z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu 横向菜单 1`] = `
.c19 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-style: normal;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  width: 1em;
  height: 1em;
  overflow: hidden;
  fill: currentColor;
}

.c21 {
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
}

.c23 {
  background: transparent;
  border: none;
  padding: 0;
  color: rgba(26,122,248,1);
  font-weight: 400;
  font-size: 14px;
  cursor: pointer;
}

.c23:hover {
  color: rgba(51,139,255,1);
}

.c23:active {
  color: rgba(12,108,235,1);
}

.c23 + .c22 {
  margin-left: 8px;
}

.c24.c24 {
  position: static;
}

.c17 {
  line-height: 0;
  -webkit-animation: cxSSXZ 150ms linear;
  animation: cxSSXZ 150ms linear;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  cursor: pointer;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  width: 100%;
  font-size: 14px;
  line-height: 20px;
  font-variant: tabular-nums;
  font-feature-settings: 'tnum';
  padding: 0;
  color: rgba(102,102,102,1);
  background: transparent;
  outline: none;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  zoom: 1;
  white-space: nowrap;
  border-bottom: 1px solid rgba(238,238,238,1);
}

.c1 .c18 {
  margin-right: 8px;
  font-size: 16px;
  color: rgba(204,204,204,1);
  -webkit-transition: color 150ms cubic-bezier(0.4,0,0.2,1);
  transition: color 150ms cubic-bezier(0.4,0,0.2,1);
}

.c1 .c4 .c6,
.c1 .c13,
.c1 .StyledMenuItemGroup-cXVagK .StyledMenuItemGroupLabel-juktNM,
.c1 .StyledMenuItemGroup-cXVagK .c4 .c6 {
  margin: 0;
  padding: 0 16px;
}

.c1 .c2 {
  overflow-x: auto;
}

.c1 .c16 .c18 {
  margin-right: 0;
}

.c3 {
  overflow-x: hidden;
  overflow-y: auto;
}

.c14 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  line-height: 32px;
  margin: 4px 8px;
  padding: 0 8px;
  font-size: 14px;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  cursor: pointer;
}

.c14 .c15 {
  display: block;
  margin-right: 8px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c12 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c10 {
  position: relative;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  position: relative;
  top: 1px;
  display: inline-block;
  vertical-align: bottom;
  border-bottom: 2px solid transparent;
  margin-top: -1px;
  border-bottom: 2px solid rgba(26,122,248,1);
}

.c10 > .c11 .c13 {
  color: rgba(102,102,102,1);
  background-color: transparent;
  font-weight: 400;
}

.c10 > .c11 .c13:hover {
  color: rgba(26,122,248,1);
  background-color: rgba(255,255,255,1);
}

.c10 > .c11 .c13:active {
  color: rgba(26,122,248,1);
  background-color: rgba(255,255,255,1);
}

.c10:hover {
  border-bottom: 2px solid rgba(26,122,248,1);
}

.c10 > .c11 .c13 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  line-height: 20px;
  color: rgba(26,122,248,1);
}

.c10 > .c11 .c13:hover .c18 {
  color: rgba(26,122,248,1);
  -webkit-transition: color 150ms cubic-bezier(0.4,0,0.2,1);
  transition: color 150ms cubic-bezier(0.4,0,0.2,1);
}

.c10 > .c11 .c13 .c18 {
  color: rgba(26,122,248,1);
  -webkit-transition: color 150ms cubic-bezier(0.4,0,0.2,1);
  transition: color 150ms cubic-bezier(0.4,0,0.2,1);
}

.c8 {
  opacity: 1;
}

.c5 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  top: 1px;
  display: inline-block;
  vertical-align: bottom;
  border-bottom: 2px solid transparent;
  margin-top: -1px;
  border-bottom: 2px solid rgba(26,122,248,1);
}

.c5 .c6 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 32px;
  line-height: 32px;
  margin: 4px 8px;
  padding: 0 8px;
  font-size: 14px;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  cursor: pointer;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  color: rgba(26,122,248,1);
  background-color: rgba(255,255,255,1);
  font-weight: 600;
}

.c5 .c6 .c18 {
  color: rgba(26,122,248,1);
}

.c5 .c6:hover {
  color: rgba(26,122,248,1);
  background-color: rgba(255,255,255,1);
}

.c5 .c6:active {
  color: rgba(26,122,248,1);
  background-color: rgba(255,255,255,1);
}

.c5 .c7 {
  -webkit-transition: opacity 150ms cubic-bezier(0.4,0,0.2,1),width 150ms cubic-bezier(0.4,0,0.2,1);
  transition: opacity 150ms cubic-bezier(0.4,0,0.2,1),width 150ms cubic-bezier(0.4,0,0.2,1);
}

.c5 .c7:only-child a {
  display: block;
}

.c5 .c6 {
  line-height: 20px;
}

.c5:hover {
  border-bottom: 2px solid rgba(26,122,248,1);
}

.c5 .c6:hover .c18 {
  color: rgba(26,122,248,1);
  -webkit-transition: color 150ms cubic-bezier(0.4,0,0.2,1);
  transition: color 150ms cubic-bezier(0.4,0,0.2,1);
}

.c5 a {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c5 a::before {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: transparent;
  content: '';
}

.c9 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  top: 1px;
  display: inline-block;
  vertical-align: bottom;
  border-bottom: 2px solid transparent;
  margin-top: -1px;
}

.c9 .c6 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 32px;
  line-height: 32px;
  margin: 4px 8px;
  padding: 0 8px;
  font-size: 14px;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  cursor: pointer;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  color: rgba(221,221,221,1);
  background-color: transparent;
  font-weight: 400;
  cursor: not-allowed;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c9 .c6:hover {
  color: rgba(221,221,221,1);
  background-color: transparent;
}

.c9 .c6:active {
  color: rgba(221,221,221,1);
  background-color: transparent;
}

.c9 .c7 {
  -webkit-transition: opacity 150ms cubic-bezier(0.4,0,0.2,1),width 150ms cubic-bezier(0.4,0,0.2,1);
  transition: opacity 150ms cubic-bezier(0.4,0,0.2,1),width 150ms cubic-bezier(0.4,0,0.2,1);
}

.c9 .c7:only-child a {
  display: block;
}

.c9 .c6 {
  line-height: 20px;
}

.c9 a {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c9 a::before {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: transparent;
  content: '';
}

.c20 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  top: 1px;
  display: inline-block;
  vertical-align: bottom;
  border-bottom: 2px solid transparent;
  margin-top: -1px;
}

.c20 .c6 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 32px;
  line-height: 32px;
  margin: 4px 8px;
  padding: 0 8px;
  font-size: 14px;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  cursor: pointer;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  color: rgba(102,102,102,1);
  background-color: transparent;
  font-weight: 400;
}

.c20 .c6:hover {
  color: rgba(26,122,248,1);
  background-color: rgba(255,255,255,1);
}

.c20 .c6:active {
  color: rgba(26,122,248,1);
  background-color: rgba(255,255,255,1);
}

.c20 .c7 {
  -webkit-transition: opacity 150ms cubic-bezier(0.4,0,0.2,1),width 150ms cubic-bezier(0.4,0,0.2,1);
  transition: opacity 150ms cubic-bezier(0.4,0,0.2,1),width 150ms cubic-bezier(0.4,0,0.2,1);
}

.c20 .c7:only-child a {
  display: block;
}

.c20 .c6 {
  line-height: 20px;
}

.c20:hover {
  border-bottom: 2px solid rgba(26,122,248,1);
}

.c20 .c6:hover .c18 {
  color: rgba(26,122,248,1);
  -webkit-transition: color 150ms cubic-bezier(0.4,0,0.2,1);
  transition: color 150ms cubic-bezier(0.4,0,0.2,1);
}

.c20 a {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c20 a::before {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: transparent;
  content: '';
}

.c0 {
  height: 100%;
  background: rgba(255,255,255,1);
  border-radius: 4px;
  padding: 0;
  overflow: auto;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
}

.c0::-webkit-scrollbar {
  width: 4px;
  height: 4px;
}

.c0::-webkit-scrollbar-thumb {
  border-radius: 999rem;
  background-color: transparent;
}

.c0:hover::-webkit-scrollbar-thumb {
  background-color: rgba(51,51,51,0.12);
}

.c0:hover::-webkit-scrollbar-thumb:hover {
  background-color: rgba(51,51,51,0.16);
}

.c0 .c25 {
  background: rgba(238,238,238,1);
  margin: 5.5px 16px;
}

<div
  className="c0 muya-menu-wrapper"
  style={Object {}}
>
  <div
    className="c1 muya-menu-menu"
  >
    <div
      className="c2 c3 muya-menu-menu-scroll-wrapper"
    >
      <div
        className="c4 c5 muya-menu-item"
        onClick={[Function]}
        role="option"
        style={Object {}}
      >
        <div
          className="c6 muya-menu-item-content"
        >
          <span
            className="c7 c8 muya-menu-item-text"
          >
            Navigation One
          </span>
        </div>
      </div>
      <div
        className="c4 c9 muya-menu-item"
        onClick={[Function]}
        role="none"
        style={Object {}}
      >
        <div
          className="c6 muya-menu-item-content"
        >
          <span
            className="c7 c8 muya-menu-item-text"
          >
            Navigation Two
          </span>
        </div>
      </div>
      <div
        className="c10 muya-menu-sub-menu"
        role="menuitem"
        style={Object {}}
      >
        <div
          aria-describedby="submenu"
          aria-expanded={true}
          aria-haspopup="true"
          className="c11 c12"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="c13 c14 muya-menu-sub-menu-title"
          >
            <div
              className="c15 "
            >
              <span
                className="submenu-title-wrapper"
              >
                Navigation Three - Submenu
              </span>
            </div>
            <div
              className="c16 c17"
            >
              <svg
                aria-hidden="false"
                className="c18 c19"
                focusable="false"
                style={
                  Object {
                    "color": "rgba(204,204,204,1)",
                    "height": 20,
                    "width": 8,
                  }
                }
                viewBox="0 0 1024 1024"
              >
                <path
                  d="M832.267 277.333H189.46a21.333 21.333 0 00-17.685 33.259l306.09 453.76a21.333 21.333 0 0034.817.779L849.387 311.36a21.333 21.333 0 00-17.12-34.027z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        className="c4 c20 muya-menu-item"
        onClick={[Function]}
        style={Object {}}
      >
        <div
          className="c6 muya-menu-item-content"
        >
          <span
            className="c7 c8 muya-menu-item-text"
          >
            <a
              aria-disabled={false}
              className="c21 c22 c23 c24"
              href="https://ant.design"
              onClick={[Function]}
              rel="noopener noreferrer"
              role="button"
              target="_blank"
            >
              Navigation Four - Link
            </a>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
